v0.6.2 (not released)
-------------------------

Bug Fixes

    - ostools.makedirs_fromfile

v0.6.1
-------------------------

New Features

    - numpy_util.dictlist2array
        Convert a list of dictionaries to a structured numpy array.  Works
        for simple typs such as strings, integers, floats.
    - stat.Binner 
        Now by default run calc_stats when calling dohist; I found I
        essentially never did just dohist without calling calc_stats.
    - ostools.makedirs_fromfile
        new keyword allow_fail to allow failure
    - io module
        when fitsio is not available, look for astropy.io.fits as well
        as pyfits (long overdue)
    - stats.print_stats
        Added nsigma= keyword
    - random.Generator
        Allow sending the random number generator through rng=

Bug Fixes

    - plotting.compare_hist
        Fix bug regarding binsize

v0.6.0 (2016-08-19)
---------------------

New Features

    - python3 support
    - unit tests.  Coverage is not yet complete.

bug fixes

    - in htm, fixed radius size check to match ra1/dec1 instead of ra2/dec2
      (thanks to Eli Rykoff)
    - some potential integer division issues

notes

    - NumpyVector.h etc. do not seem to be reliable in python3.  All use of
      them has been removed from esutil, they are left for backwards
      compatibility


v0.5.4 (2016-06-09)
---------------------

New:
    - esutil.stats
        - added print_stats() function, prints the stats generated by
          get_stats().  Replaces doprint=True functionality of get_stats()
    - esutil.numpy_util
        - New faster match() code from Eli Rykoff

Updates
    - NumpyVector.h use requirements = NPY_NOTSWAPPED | NPY_ENSUREARRAY;
    - in esutil.wcs From Matt Becker, fixed roundoff error in wcs rotations;
      added tolerance option to distortion inversions

Bug Fixes
    - fixed bug in esutil.stat.get_stats not dealing properly with scalars

v0.5.3 (2015-11-10)